# BeanChat

./: .gitignore  .gitmodules  BUILD_WINDOWS_GUIDE.md  CMakeLists.txt  ChannelList.qml  ConnectPopup.qml  ConnectedUsers.qml  EnterChannelPasswordPopup.qml  Main.qml  MainPage.qml  MyServers.qml  PrivateChatPage.qml  README.md  SettingsPage.qml  TextChat.qml  VideoChat.qml  audiocapture.cpp  audiocapture.h  audiospeaker.cpp  audiospeaker.h  avatarmanager.cpp  avatarmanager.h  cameracapture.cpp  cameracapture.h  channelmodel.cpp  channelmodel.h  chatmodel.cpp  chatmodel.h  connectedusersmodel.cpp  connectedusersmodel.h  database.cpp  database.h  ffmpegdecoder.cpp  ffmpegdecoder.h  ffmpegencoder.cpp  ffmpegencoder.h  main.cpp  monitorcapture.cpp  monitorcapture.h  myserversmodel.cpp  (+19 more)
ui/: ChannelList.qml  ConnectPopup.qml  ConnectedUsers.qml  CreateChannelPopup.qml  CurrentChannelParticipants.qml  EnterChannelPasswordPopup.qml  Main.qml  MainPage.qml  ModifyChannelPopup.qml  ModifyProfilePopup.qml  ModifySavedServerPopup.qml  MyServers.qml  MyServersItemMenu.qml  ServerMenu.qml  SettingsPage.qml  ShowImagePopup.qml  TextChat.qml
ui/components/: NotificationCard.qml
ui/constants/: NotificationTypes.qml
ui/managers/: NotificationManager.qml
ui/overlays/: NotificationOverlay.qml
ui/settingPages/: AdvancePage.qml  AudioInputPage.qml  AudioOutputPage.qml  CameraInputPage.qml  HotkeyCapture.qml  MicLevelMeter.qml  SettingCombo.qml  SettingSection.qml  SettingSlider.qml  SettingSwitch.qml  SettingsSidebar.qml
